Implement open/close accordion logic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <link rel="stylesheet" href="src/css/style.css" />
-    <script defer src="script.js"></script>
+    <script defer src="src/script.js"></script>
 
     <title>Frontend Mentor | FAQ accordion</title>
   </head>
@@ -23,66 +23,57 @@
 
       <div class="FAQs__questions">
         <ul>
-          <li class="FAQs__question-box">
-            <div class="FAQs__question">
+          <li class="FAQs__accordion">
+            <div class="FAQs__accordion--question">
               <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <button class="btn btn--show-more">
-                <img src="assets/images/icon-plus.svg" alt="" />
-              </button>
-              <button class="btn btn--show-less">
-                <img src="assets/images/icon-minus.svg" alt="" />
-              </button>
+              <span class="FAQs__accordion--btn btn"></span>
             </div>
-            <p class="FAQs__answer answer">
-              Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
-              with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio building.
-            </p>
+            <div class="FAQs__accordion--answer">
+              <p class="answer">
+                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
+                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
+                building.
+              </p>
+            </div>
           </li>
-
-          <li class="FAQs__question-box">
-            <div class="FAQs__question">
+          <li class="FAQs__accordion">
+            <div class="FAQs__accordion--question">
               <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <button class="btn btn--show-more">
-                <img src="assets/images/icon-plus.svg" alt="" />
-              </button>
-              <button class="btn btn--show-less">
-                <img src="assets/images/icon-minus.svg" alt="" />
-              </button>
+              <span class="FAQs__accordion--btn btn"></span>
             </div>
-            <p class="FAQs__answer answer">
-              Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
-              with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio building.
-            </p>
+            <div class="FAQs__accordion--answer">
+              <p class="answer">
+                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
+                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
+                building.
+              </p>
+            </div>
           </li>
-          <li class="FAQs__question-box">
-            <div class="FAQs__question">
+          <li class="FAQs__accordion">
+            <div class="FAQs__accordion--question">
               <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <button class="btn btn--show-more">
-                <img src="assets/images/icon-plus.svg" alt="" />
-              </button>
-              <button class="btn btn--show-less">
-                <img src="assets/images/icon-minus.svg" alt="" />
-              </button>
+              <span class="FAQs__accordion--btn btn"></span>
             </div>
-            <p class="FAQs__answer answer">
-              Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
-              with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio building.
-            </p>
+            <div class="FAQs__accordion--answer">
+              <p class="answer">
+                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
+                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
+                building.
+              </p>
+            </div>
           </li>
-          <li class="FAQs__question-box">
-            <div class="FAQs__question">
+          <li class="FAQs__accordion">
+            <div class="FAQs__accordion--question">
               <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <button class="btn btn--show-more">
-                <img src="assets/images/icon-plus.svg" alt="" />
-              </button>
-              <button class="btn btn--show-less">
-                <img src="assets/images/icon-minus.svg" alt="" />
-              </button>
+              <span class="FAQs__accordion--btn btn"></span>
             </div>
-            <p class="FAQs__answer answer">
-              Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills
-              with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio building.
-            </p>
+            <div class="FAQs__accordion--answer">
+              <p class="answer">
+                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
+                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
+                building.
+              </p>
+            </div>
           </li>
         </ul>
       </div>
