Replace dummy text with data

--- a/index.html
+++ b/index.html
@@ -16,66 +16,13 @@
     <div class="FAQs">
       <div class="FAQs__title">
         <div class="FAQs__title-icon">
-          <img src="assets/images/icon-star.svg" alt="" />
+          <img src="assets/images/icon-star.svg" alt="Star icon" />
         </div>
         <div class="FAQs__title-text main-heading">FAQs</div>
       </div>
 
       <div class="FAQs__questions">
-        <ul>
-          <li class="FAQs__accordion">
-            <div class="FAQs__accordion--question">
-              <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <span class="FAQs__accordion--btn btn"></span>
-            </div>
-            <div class="FAQs__accordion--answer">
-              <p class="answer">
-                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
-                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
-                building.
-              </p>
-            </div>
-          </li>
-          <li class="FAQs__accordion">
-            <div class="FAQs__accordion--question">
-              <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <span class="FAQs__accordion--btn btn"></span>
-            </div>
-            <div class="FAQs__accordion--answer">
-              <p class="answer">
-                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
-                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
-                building.
-              </p>
-            </div>
-          </li>
-          <li class="FAQs__accordion">
-            <div class="FAQs__accordion--question">
-              <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <span class="FAQs__accordion--btn btn"></span>
-            </div>
-            <div class="FAQs__accordion--answer">
-              <p class="answer">
-                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
-                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
-                building.
-              </p>
-            </div>
-          </li>
-          <li class="FAQs__accordion">
-            <div class="FAQs__accordion--question">
-              <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
-              <span class="FAQs__accordion--btn btn"></span>
-            </div>
-            <div class="FAQs__accordion--answer">
-              <p class="answer">
-                Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding
-                skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio
-                building.
-              </p>
-            </div>
-          </li>
-        </ul>
+        <ul></ul>
       </div>
     </div>
   </body>
