Implement responsive phone layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="FAQs">
       <div class="FAQs__title">
-        <div class="FAQs__title-icon">
-          <img src="assets/images/icon-star.svg" alt="Star icon" />
+        <div class="FAQs__title-icon-box">
+          <img src="assets/images/icon-star.svg" class="FAQs__title-icon" alt="Star icon" />
         </div>
         <div class="FAQs__title-text main-heading">FAQs</div>
       </div>
